--- a/LIN.Cloud.OpenAssistant/LIN.Cloud.OpenAssistant.csproj
+++ b/LIN.Cloud.OpenAssistant/LIN.Cloud.OpenAssistant.csproj
@@ -7,14 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Http.Utils" Version="5.1.1" />
+    <PackageReference Include="Global.Http" Version="3.9.0" />
+    <PackageReference Include="Http.Utils" Version="5.2.0" />
     <PackageReference Include="LIN.Access.Auth" Version="2025.9.21" />
-    <PackageReference Include="LIN.Access.OpenIA" Version="2025.9.21" />
     <PackageReference Include="SILF.Script" Version="13.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\AccesoAPI\LIN.Access.Gemini\LIN.Access.Gemini.csproj" />
     <ProjectReference Include="..\..\..\AccesoAPI\LIN.OpenAI.Connector\LIN.OpenAI.Connector.csproj" />
     <ProjectReference Include="..\LIN.Cloud.OpenAssistant.Persistence\LIN.Cloud.OpenAssistant.Persistence.csproj" />
   </ItemGroup>
