--- a/LIN.Cloud.OpenAssistant/LIN.Cloud.OpenAssistant.csproj
+++ b/LIN.Cloud.OpenAssistant/LIN.Cloud.OpenAssistant.csproj
@@ -1,21 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net9.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Global.Http" Version="3.9.0" />
-    <PackageReference Include="Http.Utils" Version="5.2.0" />
-    <PackageReference Include="LIN.Access.Auth" Version="2025.9.21" />
-    <PackageReference Include="SILF.Script" Version="13.3.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Global.Http" Version="3.9.0" />
+		<PackageReference Include="Http.Utils" Version="5.2.0" />
+		<PackageReference Include="LIN.Access.Auth" Version="2025.9.21" />
+		<PackageReference Include="LIN.OpenAI.Connector" Version="1.0.0" />
+		<PackageReference Include="SILF.Script" Version="13.3.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\AccesoAPI\LIN.OpenAI.Connector\LIN.OpenAI.Connector.csproj" />
-    <ProjectReference Include="..\LIN.Cloud.OpenAssistant.Persistence\LIN.Cloud.OpenAssistant.Persistence.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\LIN.Cloud.OpenAssistant.Persistence\LIN.Cloud.OpenAssistant.Persistence.csproj" />
+	</ItemGroup>
 
 </Project>
